--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/accordions/_accordion-item/accordion-item.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/accordions/_accordion-item/accordion-item.twig
@@ -5,14 +5,12 @@ siehe src/ui/2-components/accordions/accordion.twig
 {% if accordionItem.title %}
     <div class="accordion-item">
         {% include '@component/accordions/_accordion-header/accordion-header.twig' with {
-            itemUid: itemUid,
-            title: accordionItem.title,
+            accordionItem: accordionItem,
         } only %}
         {% include '@component/accordions/_accordion-body/accordion-body.twig' with {
-            uid: uid,
-            itemUid: itemUid,
-            toggle: toggle,
             accordionItem: accordionItem,
+            uid: uid,
+            toggle: toggle,
         } only %}
     </div>
 {% endif %}
