--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/accordions/accordion.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/accordions/accordion.twig
@@ -5,14 +5,9 @@ see: src/ui/3-modules/m26-accordion
 see: https://getbootstrap.com/docs/5.0/components/accordion/
 see: https://getbootstrap.com/docs/5.0/components/collapse/
 
-itemUid:        uid eines Accordion Item
-toggle:         Schalter, ob ein Item geöffnet bleibt, wenn sich ein anderes öffnet, oder nicht
 uid:            uid des CE, daraus wird eine uid für das Accordion erzeugt
-grid:           Für ein Item: Optionen für TextMedia, also wenn ein Item Bild und Text hat
-image:          Für ein Item: das Bild
-imageorient:    Für ein Item: Bildausrichtung für TextMedia (inside, beside, links, rechts)
-text:           Für ein Item: der Text
-title:          Für ein Item: der Titel
+toggle:         Schalter, ob ein Item geöffnet bleibt, wenn sich ein anderes öffnet, oder nicht
+itemUid:        String, uid eines Accordion Item
 #}
 
 {% set uid = 'acc' ~ uid %}
@@ -21,9 +16,8 @@ title:          Für ein Item: der Titel
     {% for accordionItem in items %}
         {% include '@component/accordions/_accordion-item/accordion-item.twig' with {
             uid: uid,
-            itemUid: itemUid,
             toggle: toggle,
-            accordionItem: accordionItem|merge({'itemUid': uid ~ '-' ~ loop.index}),
+            accordionItem: accordionItem|merge({ itemUid: uid ~ '-' ~ loop.index }),
         } only %}
     {% endfor %}
 </div>
