--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/textmedias/textmedia.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/textmedias/textmedia.twig
@@ -1,33 +1,45 @@
 {#
+Diese Komponente regelt alle Bild-Text-Kombinationen.
+
 see: src/ui/3-modules/m03-textmedia
 see: src/ui/2-components/accordions/_accordion-body/accordion-body.twig
 
-imageorient.inside: Bild im Text oder neben dem Text, default: neben dem Text.
 thisMediaSizeSmall: Backendseitig kann auch eine 0 kommen, was 12 bedeutet.
+imageorient.inside: Bild im Text oder neben dem Text, default: neben dem Text.
 
 thisImageHideOnSmall, thisImageHideOnMedium, thisImageHideOnLarge: Verbigt Bilder für bestimmte Breakpoints.
+Anmerkung: Streng genommen müsste dies auch für "nur Bild(er)" gelten. Da dies aber wenig Sinn macht, wird thisImageHideXxx hier ignoriert, also nicht übergeben.
+
 #}
 
-{% set thisMediaSizeSmall = media_size_small == 0 ? 12 : media_size_small %}
-{% set thisImageHideOnSmall = grid.showOnSmall ? '' : 'd-xs-none-only d-sm-none-only' %}
-{% set thisImageHideOnMedium = grid.showOnMedium ? '' : 'd-md-none-only' %}
-{% set thisImageHideOnLarge = grid.showOnLarge ? '' : 'd-lg-none-only d-xl-none-only d-xxl-none-only' %}
+{% if bodytext and assets %} {# der Normalfall: Text und Bild(er) #}
 
-{% if bodytext and assets %} {# der Normalfall #}
+    {% set thisMediaSizeSmall = media_size_small == 0 ? 12 : media_size_small %}
+    {% set thisImageHideOnSmall = grid.showOnSmall ? '' : 'd-xs-none-only d-sm-none-only' %}
+    {% set thisImageHideOnMedium = grid.showOnMedium ? '' : 'd-md-none-only' %}
+    {% set thisImageHideOnLarge = grid.showOnLarge ? '' : 'd-lg-none-only d-xl-none-only d-xxl-none-only' %}
+    
     {% if imageorient.inside %}
         {% include '@component/textmedias/_textmedia-inside/textmedia-inside.twig' %}
     {% else %}
         {% include '@component/textmedias/_textmedia-beside/textmedia-beside.twig' %}
     {% endif %}
-{% elseif bodytext %} {# kein Text #}
+
+{% elseif bodytext %} {# nur Text #}
+
     {% include '@object/rtes/rte.twig' with {
         'rte': bodytext
     } only %}
-{% elseif assets %} {# kein Bild #}
+
+{% elseif assets %} {# nur Bild(er) #}
+
     {% include '@component/medias/media.twig' with {
         assets: assets,
         grid: grid,
     } only %}
+
 {% else %} {# gar nix #}
+
     sorry, no content given
+
 {% endif %}
