--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/metamenus/metamenu.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/metamenus/metamenu.twig
@@ -1,18 +1,19 @@
 {#
 identifier: zusammengesetzter String
-uid:        Dürfte immer leer sein, außer diese Komponente wird in einem Contentelement verwendet.
-pid:        Die uid wird die pid für die Items.
+uid:        Der Navigation kann optional eine uid übergeben werden, z.B. wenn
+            - es verschiedene Sidebarnavigationen gibt
+            - eine Navigation in einem Content-Element verwendet wird
 #}
 
 {% set identifier = 'metamenu' %}
 
 <nav>
-    <ul id="{{ identifier }}{{ uid }}" class="c-{{ identifier }}">
+    <ul id="{{ identifier }}{{ uid }}" class="c-{{ identifier }} {{ additionalClass }}">
         {% for item in items %}
             {% include '@component/navigation/metamenus/_metamenu-item/metamenu-item.twig' with {
                 identifier: identifier,
+                menuUid: uid,
                 item: item,
-                pid: uid,
             } only %}
         {% endfor %}
     </ul>
