--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/breadcrumbs/_breadcrumb-item/breadcrumb-item.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/breadcrumbs/_breadcrumb-item/breadcrumb-item.twig
@@ -1,9 +1,13 @@
 {#
+doktype:            TYPO3 doktype: 1 wird ignoriert (weil Default), 3 = externer Link, 199 = Spacer, [...] 
 current:            Flag für ein Item, das die aktuelle Seite repräsentiert.
 active:             Flag, wenn ein Item in der Rootline ist, was in diesem Fall (breadcrumb) für alle Items zutrifft.
-breadcrumb-item:    Ist die nötige Klasse für Bootstrap.
+breadcrumb-item:    Ist die nötige Klasse für Bootstrap und ist deswegen nicht variabel.
+menuUid:            Uid des gesamten Menus (das ist keine page uid!)
+item.data.uid:      Uid des Menu-Item (= page uid des Items)
 #}
 
+{% set doktype = item.data.doktype > 1 ? 'doktype-' ~ item.data.doktype  %}
 {% set current = item.current ? 'current ' %}
 {% set active = item.active ? 'active ' %}
 {% set link =
@@ -17,7 +21,7 @@ breadcrumb-item:    Ist die nötige Klasse für Bootstrap.
     }
 %}
 
-<li id="{{ identifier }}-{{ item.uid }}" class="breadcrumb-item">
+<li id="{{ identifier }}{{ menuUid }}-{{ item.data.uid }}" class="breadcrumb-item {{ doktype }}">
     {% embed '@object/links/link.twig' with link %}
         {% block linkContent %}
             {{ item.title }}
