--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/breadcrumbs/breadcrumb.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/breadcrumbs/breadcrumb.twig
@@ -1,24 +1,19 @@
 {#
 identifier: zusammengesetzter String
 uid:        Dürfte immer leer sein, außer diese Komponente wird in einem Contentelement verwendet.
-breadcrumb: Ist die nötige Klasse für Bootstrap.
+breadcrumb: Ist die nötige Klasse für Bootstrap und ist deswegen nicht variabel.
 #}
 
-{% set identifier = 'bc' ~ uid %}
+{% set identifier = 'breadcrumb' %}
 
-{% extends '@component/containers/container.twig' %}
-
-{% block moduleContentBlock %}
-
-    <nav>
-        <ol id="{{ identifier }}" class="breadcrumb">
-            {% for item in items %}
-                {% include '@component/breadcrumbs/_breadcrumb-item/breadcrumb-item.twig' with {
-                    identifier: identifier,
-                    item: item,
-                } only %}
-            {% endfor %}
-        </ol>
-    </nav>
-
-{% endblock %}
+<nav>
+    <ol id="{{ identifier }}{{ uid }}" class="breadcrumb c-{{ identifier }} {{ additionalClass }}">
+        {% for item in items %}
+            {% include '@component/breadcrumbs/_breadcrumb-item/breadcrumb-item.twig' with {
+                identifier: identifier,
+                menuUid: uid,
+                item: item,
+            } only %}
+        {% endfor %}
+    </ol>
+</nav>
