--- a/app/frontend/starter_freya_fractal_starterkit/src/ui/3-modules/m27-download/m27-download.twig
+++ b/app/frontend/starter_freya_fractal_starterkit/src/ui/3-modules/m27-download/m27-download.twig
@@ -1,4 +1,34 @@
+{#
+componentBackground: Wenn der Background fluid ist, dann wird er im Container gesetzt, ansonsten hier, in der Componente.
+#}
 
-<p>
-    Please make a custom frontend integration.
-</p>
+{% set componentBackground = tx_starter_background_fluid ? '' : tx_starter_background %}
+
+{% extends '@component/containers/container.twig' %}
+
+{% block moduleContentBlock %}
+
+    <div id="c{{ uid }}" class="m-{{ CType }} {{ componentBackground }}">
+
+        {% include '@component/module/moduleheaders/moduleheader.twig' with {
+            'date': date,
+            'header': header,
+            'subheader': subheader,
+            'overline': overline,
+        } only %}
+
+        {% if bodytext %}
+            {% include '@object/rtes/rte.twig' with {
+                'rte': bodytext,
+                'additionalClass': 'mb-3'
+            } only %}
+        {% endif %}
+
+        {% include '@component/downloads/download.twig' with {
+            '_globals': _globals,
+            'items': items,
+        } only %}
+
+    </div>
+
+{% endblock %}
